--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.0",
     "@pothos/core": "^4.6.2",
     "@pothos/plugin-prisma": "^4.8.1",
     "@prisma/client": "^6.7.0",
