--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@pothos/core": "^4.6.2",
     "@pothos/plugin-prisma": "^4.8.1",
     "@prisma/client": "^6.7.0",
-    "graphql": "^16.11.0"
+    "graphql": "^16.11.0",
+    "graphql-scalars": "^1.24.2"
   }
 }
