--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "devDependencies": {
     "@types/node": "^22.15.17",
     "prisma": "^6.7.0",
+    "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.4"
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
