--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,6 @@
   "devDependencies": {
     "@types/node": "^22.15.17",
     "prisma": "^6.7.0",
-    "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
