--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node-dev src/index.ts",
-    "test": "vitest"
+    "test": "DATABASE_URL=file:./test.db vitest"
   },
   "keywords": [],
   "author": "",
